--- a/src/index.html
+++ b/src/index.html
@@ -1,8 +1,14 @@
 <!doctype html>
+<!-- CSS Reset -->
+<link rel="stylesheet" href="//cdn.rawgit.com/necolas/normalize.css/master/normalize.css">
+  
+  <!-- Milligram CSS minified -->
+<link rel="stylesheet" href="//cdn.rawgit.com/milligram/milligram/master/dist/milligram.min.css">
+
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>Chatbott</title>
+  <title>Directivesdeepdive</title>
   <base href="/">
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
